fix dark mode activities

--- a/front/src/app/components/panel-activities/panel-activities.component.scss
+++ b/front/src/app/components/panel-activities/panel-activities.component.scss
@@ -4,6 +4,10 @@
   display: block;
 
   &.dark-mode {
+    p {
+      color: white;
+    }
+    
     .progress-bar {    
       p {
         color: fColor(headerColor);
